--- a/src/main/resources/templates/h5/mobile/carTimeCoupon/addTimeCoupon.html
+++ b/src/main/resources/templates/h5/mobile/carTimeCoupon/addTimeCoupon.html
@@ -48,6 +48,7 @@
             </div>
             <input type="hidden" name="parkingType" value="6" >
             <input type="hidden" name="timeCoupon" value="1" >
+            <input name="infieldPermission" value="0" type="hidden">
         </form>
         <div class="mui-content-padded">
             <div class="btncont">
