--- a/src/main/resources/templates/h5/mobile/special/detailSpecial.html
+++ b/src/main/resources/templates/h5/mobile/special/detailSpecial.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>永久月租详情</title>
+    <title>特殊车辆管理</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="/css/h5/mobile/common.css"/>
     <style type="text/css">
@@ -43,6 +43,7 @@
                     <h3>${data.data.number}</h3>
                     <h5><span>${data.data.parkingName}</span></h5>
                      <div class="cont">
+                        <p>车费<span>${data.data.cost}</span></p>
                         <p>车主姓名<span>${data.data.name}</span></p>
                         <p>联系方式<span>${data.data.phone}</span></p>
                         <p>公司名称<span>${data.data.corporateName}</span></p>
