--- a/src/main/resources/templates/system/car/business/add.html
+++ b/src/main/resources/templates/system/car/business/add.html
@@ -10,6 +10,7 @@
                 <div class="ibox-content">
                     <form class="form-horizontal m-t" id="signupForm">
                         <input id="parkingType" name="parkingType" value="3" type="hidden">
+                        <input id="infieldPermission" name="infieldPermission" value="0" type="hidden">
                         <div class="form-group">
                             <label class="col-sm-3 control-label">车牌号：</label>
                             <div class="col-sm-8">
