--- a/src/main/resources/templates/system/car/singleVip/add.html
+++ b/src/main/resources/templates/system/car/singleVip/add.html
@@ -10,7 +10,6 @@
 					<div class="ibox-content">
 						<form class="form-horizontal m-t" id="signupForm">
 							<input id="parkingType" name="parkingType" value="5" type="hidden">
-							<input id="infieldPermission" name="infieldPermission" value="1" type="hidden">
 							<div class="form-group">
 								<label class="col-sm-3 control-label">停车场</label>
 								<div class="col-sm-8">
@@ -61,6 +60,13 @@
 								<div class="col-sm-8">
 									<label class="radio-inline"> <input type="radio" name="status" value="1" checked /> 正常 </label>
 									<label class="radio-inline"> <input type="radio" name="status" value="0" /> 禁用 </label>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">内场权限:</label>
+								<div class="col-sm-8">
+									<label class="radio-inline"> <input type="radio" name="infieldPermission" value="1" checked /> 有 </label>
+									<label class="radio-inline"> <input type="radio" name="infieldPermission" value="0" /> 无 </label>
 								</div>
 							</div>
 								<div class="form-group">
