--- a/src/main/resources/templates/h5/mobile/carBusiness/listShanghu.html
+++ b/src/main/resources/templates/h5/mobile/carBusiness/listShanghu.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>商户车辆</title>
+    <title>商户车辆管理</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="/css/h5/mobile/common.css"/>
     <style type="text/css">
