--- a/src/main/resources/templates/h5/mobile/home.html
+++ b/src/main/resources/templates/h5/mobile/home.html
@@ -45,7 +45,9 @@
             <a class="mui-col-xs-4" id="longCar" ><i class="iconfont icon-yuezu" style="background: linear-gradient(320deg,#6dce5b 40%,rgba(109, 206, 91,0.4));"></i>月租车辆</a>
             <a class="mui-col-xs-4" id="businessCar" ><i class="iconfont icon-shanghu" style="background: linear-gradient(320deg,#1296db 40%,rgba(18, 150, 219,0.4));"></i>商户车辆</a>
             <a class="mui-col-xs-4" id="timeCouponCar" ><i class="iconfont icon-youhuiquan" style="background: linear-gradient(320deg,#f3a425 40%,rgba(243, 164, 37,0.6))"></i>时长劵车辆</a>
-            <a class="mui-col-xs-4" id="vipCar" ><i class="iconfont icon-Vip" style="background: linear-gradient(320deg,#f3a425 40%,rgba(243, 164, 37,0.6))"></i>VIP车辆</a>
+            <a class="mui-col-xs-4" id="vipCar" ><i class="iconfont icon-Vip" style="background: linear-gradient(320deg,#f3a425 40%,rgba(243, 164, 37,0.6))"></i>永久月租</a>
+            <a class="mui-col-xs-4" id="singleVip" ><i class="iconfont icon-Vip" style="background: linear-gradient(320deg,#f3a425 40%,rgba(243, 164, 37,0.6))"></i>单次VIP车辆</a>
+            <a class="mui-col-xs-4" id="special" ><i class="iconfont icon-Vip" style="background: linear-gradient(320deg,#f3a425 40%,rgba(243, 164, 37,0.6))"></i>特殊车辆</a>
             <a class="mui-col-xs-4" id="recharge"><i class="iconfont icon-chongzhi" style="background: linear-gradient(320deg,#e4787c 40%,rgba(228, 120, 124,0.4));"></i>商户充值</a>
             <a class="mui-col-xs-4" id="passageway"><i class="iconfont icon-tongdao" style="background: linear-gradient(320deg,#5f6eab 40%,rgba(95, 110, 171,0.4));"></i>通道管理</a>
         </div>
@@ -62,12 +64,16 @@
         displayHide("/mobile/car/business/authz", "#businessCar");
         displayHide("/mobile/car/timeCoupon/authz", "#timeCouponCar");
         displayHide("/mobile/car/vip/authz", "#vipCar");
+        displayHide("/mobile/car/singleVip/authz", "#singleVip");
+        displayHide("/mobile/car/special/authz", "#special");
         displayHide("/mobile/recharge/authz", "#recharge");
         displayHide("/mobile/passageway/authz", "#passageway");
         $("#longCar").click(function () {   window.location.replace("/mobile/car/long");}) ;
         $("#businessCar").click(function () {   window.location.replace("/mobile/car/business");}) ;
         $("#timeCouponCar").click(function () {   window.location.replace("/mobile/car/timeCoupon");}) ;
         $("#vipCar").click(function () {    window.location.replace("/mobile/car/vip");}) ;
+        $("#singleVip").click(function () {    window.location.replace("/mobile/car/singleVip");}) ;
+        $("#special").click(function () {    window.location.replace("/mobile/car/special");}) ;
         $("#recharge").click(function () {    window.location.replace("/mobile/recharge");}) ;
         $("#passageway").click(function () {    window.location.replace("/mobile/passageway");}) ;
     });
