--- a/src/main/resources/templates/h5/mobile/singleVip/detailSingleVip.html
+++ b/src/main/resources/templates/h5/mobile/singleVip/detailSingleVip.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>永久月租详情</title>
+    <title>单次VIP车辆</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="/css/h5/mobile/common.css"/>
     <style type="text/css">
