--- a/src/main/resources/templates/h5/mobile/special/addSpecial.html
+++ b/src/main/resources/templates/h5/mobile/special/addSpecial.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>添加商户车辆</title>
+    <title>特殊车辆管理</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,ujob-scalable=no">
     <link rel="stylesheet" href="/css/h5/mobile/common.css" />
 </head>
@@ -16,13 +16,22 @@
     <div class="mui-content">
         <form id="signupForm">
             <div class="mui-input-group">
+                <div class="mui-input-row radio">
+                    <label>停车场</label>
+                    <div style="width: 4rem;display: flex;justify-content: space-between;margin-right: 2rem;">
+                        <div class="mui-radio mui-left" id="parking">
+                            <label></label>
+                            <input name="parkingId" type="radio" checked>
+                        </div>
+                    </div>
+                </div>
                 <div class="mui-input-row">
                     <label>车牌号</label>
                     <input id="number" name="number" type="text" class="mui-input-clear mui-input" placeholder="请输入车牌号">
                 </div>
-                 <div class="mui-input-row">
-                    <label>免费时长(分钟)</label>
-                    <input id="freeTime"  name="freeTime" type="number" class="mui-input-clear mui-input" placeholder="请输入免费时长">
+                <div class="mui-input-row">
+                    <label>停车费</label>
+                    <input id="cost" name="cost" class="mui-input-clear mui-input" type="number" value="5" placeholder="请输入停车费">
                 </div>
                 <div class="mui-input-row">
                     <label>车主姓名</label>
@@ -31,6 +40,19 @@
                 <div class="mui-input-row">
                     <label>联系方式</label>
                     <input name="phone" type="number" class="mui-input-clear mui-input" placeholder="请输入联系方式">
+
+                </div>
+                <div class="mui-input-row">
+                    <label>公司姓名</label>
+                    <input name="corporateName" type="text" class="mui-input-clear mui-input" placeholder="请输入公司姓名">
+                </div>
+                <div class="mui-input-row">
+                    <label>特殊车分类</label>
+                    <input name="classification" type="text" class="mui-input-clear mui-input" placeholder="请输入分类">
+                </div>
+                <div class="mui-input-row">
+                    <label>备注</label>
+                    <input name="remarks" type="text" class="mui-input-clear mui-input" placeholder="请输入备注">
                 </div>
                 <div class="mui-input-row radio">
                     <label>状态</label>
@@ -45,34 +67,41 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <input type="hidden" name="parkingType" value="3" >
-            <input name="infieldPermission" value="0" type="hidden">
-        </form>
-        <div class="mui-content-padded">
-            <div class="btncont">
-                <a class="mui-btn mui-btn-block mui-btn-primary" id="alertBtn">提交</a>
-            </div>
+                <div class="mui-input-row radio">
+                    <label>内场权限</label>
+                    <div style="width: 4rem;display: flex;justify-content: space-between;margin-right: 2rem;">
+                        <div class="mui-radio mui-left">
+                            <label>有</label>
+                            <input name="infieldPermission" type="radio" value="1" checked>
+                        </div>
+                        <div class="mui-radio mui-left">
+                            <label>无</label>
+                            <input name="infieldPermission" value="0" type="radio" >
+                        </div>
+                    </div>
+
+                </div>
+        </div>
+            <input type="hidden" name="parkingType" value="4" >
+    </form>
+    <div class="mui-content-padded">
+        <div class="btncont">
+            <a class="mui-btn mui-btn-block mui-btn-primary" id="alertBtn">提交</a>
         </div>
     </div>
+</div>
 </body>
-
 <script src="/js/h5/mobile/common.js"></script>
-<script src="/js/h5/mobile/webuploader.min.js"></script>
-<script src="/js/h5/mobile/demo.js"></script>
 <script>
-
     // 提交(非最后一步提交成功的验证，用“自动消失提示框”)
     $("#alertBtn").click(function() {
         if ($("#number").val() == '') {
             toast("车牌号不能为空");
-        }else if ($("#freeTime").val() == '') {
-            toast("免费时长不能为空");
         }else {
-            $.post("/sys/car/business/save",$('#signupForm').serialize(),function(data) {
+            $.post("/sys/car/special/save",$('#signupForm').serialize(),function(data) {
                 toast(data.msg) ;
                 if(data.code == 0) {
-                    window.location.href='/mobile/car/business';
+                    window.location.href='/mobile/car/special';
                 }
             },"json");
         }
@@ -80,7 +109,7 @@
     $.getJSON("/mobile/getParking",function (data) {
         $("#parking label").text(data.data[0].name) ;
         $("#parking input").val(data.data[0].id) ;
-    }) ;
+    })
     function toast(msg) {
         mui.toast(msg);
         $("#name").focus();//定位
