--- a/src/main/resources/templates/system/car/special/edit.html
+++ b/src/main/resources/templates/system/car/special/edit.html
@@ -11,7 +11,6 @@
 						<form class="form-horizontal m-t" id="signupForm">
 						<input id="id" name="id" th:value="${car.id}"  type="hidden">
 							<input id="parkingType" name="parkingType" value="4" type="hidden">
-							<input id="infieldPermission" name="infieldPermission" value="1" type="hidden">
 							<div class="form-group">
 								<label class="col-sm-3 control-label">停车场</label>
 								<div class="col-sm-8">
@@ -30,7 +29,7 @@
 							<div class="form-group">
 								<label class="col-sm-3 control-label">停车费(元)：</label>
 								<div class="col-sm-8">
-									<label><input id="cost" name="cost" th:value="${car.cost}" class="form-control" type="text"></label>
+									<label><input id="cost" name="cost" th:value="${car.cost}" class="form-control" type="number"></label>
 								</div>
 							</div>
 							<div class="form-group">
@@ -72,6 +71,18 @@
 									</label> <label class="radio-inline"> <input
 										th:field="*{car.status}" type="radio" name="status" value="0" />
 									禁用
+								</label>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">内场权限:</label>
+								<div class="col-sm-8">
+									<label class="radio-inline"> <input
+											th:field="*{car.infieldPermission}" type="radio" name="infieldPermission" value="1" />
+										有
+									</label> <label class="radio-inline"> <input
+										th:field="*{car.infieldPermission}" type="radio" name="infieldPermission" value="0" />
+									无
 								</label>
 								</div>
 							</div>
