--- a/src/main/resources/templates/system/car/timeCoupon/edit.html
+++ b/src/main/resources/templates/system/car/timeCoupon/edit.html
@@ -11,6 +11,7 @@
                     <form class="form-horizontal m-t" id="signupForm">
                         <input id="id" name="id" th:value="${car.id}" type="hidden">
                         <input id="parkingType" name="parkingType" value="3" type="hidden">
+                        <input id="infieldPermission" name="infieldPermission" value="0" type="hidden">
                         <div class="form-group">
                             <label class="col-sm-3 control-label">车牌号：</label>
                             <div class="col-sm-8">
