--- a/src/main/resources/templates/h5/mobile/carLong/detailYuezu.html
+++ b/src/main/resources/templates/h5/mobile/carLong/detailYuezu.html
@@ -43,6 +43,8 @@
                 <h3>${data.data.number}</h3>
                 <h5><span>${data.data.parkingName}</span></h5>
                 <div class="cont">
+                    <p>替换车牌1<span>${data.data.numberOne}</span></p>
+                    <p>替换车牌2<span>${data.data.numberTow}</span></p>
                     <p>生效日期<span>${data.data.beginDate}</span></p>
                     <p>失效日期<span>${data.data.endDate}</span></p>
                     <p>车主姓名<span>${data.data.name}</span></p>
