--- a/src/main/resources/templates/h5/mobile/carLong/editYuezu.html
+++ b/src/main/resources/templates/h5/mobile/carLong/editYuezu.html
@@ -21,6 +21,14 @@
                     <input id="number" name="number" type="text" class="mui-input-clear mui-input" placeholder="请输入车牌号" th:value="${carDTO.number}">
                 </div>
                 <div class="mui-input-row">
+                    <label>替换车牌1</label>
+                    <input name="numberOne" type="text" class="mui-input-clear mui-input" placeholder="请输入分类" th:value="${carDTO.numberOne}">
+                </div>
+                <div class="mui-input-row">
+                    <label>替换车牌2</label>
+                    <input name="numberTow" type="text" class="mui-input-clear mui-input" placeholder="请输入备注" th:value="${carDTO.numberTow}">
+                </div>
+                <div class="mui-input-row">
                     <label>生效日期</label>
                     <span class="mui-navigate-right"></span>
                     <input inlist="beginDate" name="beginDate" id="date" readonly placeholder="请选择生效日期" th:value="${carDTO.beginDate}">
@@ -43,14 +51,6 @@
                 <div class="mui-input-row">
                     <label>公司姓名</label>
                     <input name="corporateName" type="text" class="mui-input-clear mui-input" placeholder="请输入公司姓名" th:value="${carDTO.corporateName}">
-                </div>
-                 <div class="mui-input-row">
-                    <label>月租车分类</label>
-                    <input name="classification" type="text" class="mui-input-clear mui-input" placeholder="请输入分类" th:value="${carDTO.classification}">
-                </div>
-                <div class="mui-input-row">
-                    <label>备注</label>
-                    <input name="remarks" type="text" class="mui-input-clear mui-input" placeholder="请输入备注" th:value="${carDTO.remarks}">
                 </div>
                 <div class="mui-input-row radio">
                     <label>状态</label>
