--- a/src/main/resources/templates/h5/mobile/carVip/detailVip.html
+++ b/src/main/resources/templates/h5/mobile/carVip/detailVip.html
@@ -43,6 +43,8 @@
                     <h3>${data.data.number}</h3>
                     <h5><span>${data.data.parkingName}</span></h5>
                      <div class="cont">
+                        <p>替换车牌1<span>${data.data.numberOne}</span></p>
+                        <p>替换车牌2<span>${data.data.numberTow}</span></p>
                         <p>车主姓名<span>${data.data.name}</span></p>
                         <p>联系方式<span>${data.data.phone}</span></p>
                         <p>公司名称<span>${data.data.corporateName}</span></p>
