--- a/src/main/resources/templates/system/car/long/edit.html
+++ b/src/main/resources/templates/system/car/long/edit.html
@@ -27,6 +27,18 @@
 								</div>
 							</div>
 							<div class="form-group">
+								<label class="col-sm-3 control-label">替换车牌1：</label>
+								<div class="col-sm-8">
+									<input id="numberOne" name="numberOne" th:value="${car.numberOne}" class="form-control" type="text">
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">替换车牌2：</label>
+								<div class="col-sm-8">
+									<input id="numberTow" name="numberTow" th:value="${car.numberTow}" class="form-control" type="text">
+								</div>
+							</div>
+							<div class="form-group">
 								<label class="col-sm-3 control-label">生效日期：</label>
 								<div class="col-sm-8">
 									<label><input name="beginDate" th:value="${car.beginDate}" type="text" class="demo-input" placeholder="请选择生效日期" id="beginDate"></label>
@@ -54,18 +66,6 @@
 								<label class="col-sm-3 control-label">公司名称：</label>
 								<div class="col-sm-8">
 									<input id="corporateName" name="corporateName" th:value="${car.corporateName}" class="form-control" type="text">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">备注：</label>
-								<div class="col-sm-8">
-									<input id="remarks" name="remarks" th:value="${car.remarks}" class="form-control" type="text">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">月租车分类：</label>
-								<div class="col-sm-8">
-									<input id="sort" name="classification" th:value="${car.classification}" class="form-control" type="text">
 								</div>
 							</div>
 							<div class="form-group">
