--- a/src/main/resources/templates/system/car/vip/add.html
+++ b/src/main/resources/templates/system/car/vip/add.html
@@ -26,6 +26,18 @@
 								</div>
 							</div>
 							<div class="form-group">
+								<label class="col-sm-3 control-label">替换车牌1：</label>
+								<div class="col-sm-8">
+									<input id="numberOne" name="numberOne" class="form-control" type="text">
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">替换车牌2：</label>
+								<div class="col-sm-8">
+									<input id="numberTow" name="numberTow" class="form-control" type="text">
+								</div>
+							</div>
+							<div class="form-group">
 								<label class="col-sm-3 control-label">车主姓名：</label>
 								<div class="col-sm-8">
 									<input id="name" name="name" class="form-control" type="text">
@@ -41,18 +53,6 @@
 								<label class="col-sm-3 control-label">公司名称：</label>
 								<div class="col-sm-8">
 									<input id="corporateName" name="corporateName" class="form-control" type="text">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">备注：</label>
-								<div class="col-sm-8">
-									<input id="remarks" name="remarks" class="form-control" type="text">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">月租车分类：</label>
-								<div class="col-sm-8">
-									<input id="classification" name="classification" class="form-control" type="text">
 								</div>
 							</div>
 							<div class="form-group">
