--- a/src/main/resources/templates/h5/mobile/carLong/addYuezu.html
+++ b/src/main/resources/templates/h5/mobile/carLong/addYuezu.html
@@ -29,14 +29,14 @@
                     <label>车牌号</label>
                     <input id="number" name="number" type="text" class="mui-input-clear mui-input" placeholder="请输入车牌号">
                 </div>
-                <div class="mui-input-row">
+<!--                <div class="mui-input-row">
                     <label>替换车牌1</label>
                     <input name="numberOne" type="text" class="mui-input-clear mui-input" placeholder="请输入车牌号">
                 </div>
                 <div class="mui-input-row">
                     <label>替换车牌2</label>
                     <input name="numberTow" type="text" class="mui-input-clear mui-input" placeholder="请输入车牌号">
-                </div>
+                </div>-->
                 <div class="mui-input-row">
                     <label>生效日期</label>
                     <span class="mui-navigate-right"></span>
