--- a/src/main/resources/static/css/h5/mobile/common.css
+++ b/src/main/resources/static/css/h5/mobile/common.css
@@ -1,7 +1,7 @@
 @import url("mui.min.css");
 @import url("mui.picker.min.css");
-@import url("../iconfont/iconfont.css");
-@import url("http://at.alicdn.com/t/font_1490059_c78b4mjwbd.css");
+@import url("../../../fonts/mobile/iconfont.css");
+/*@import url("http://at.alicdn.com/t/font_1490059_c78b4mjwbd.css");*/
 @import url("list&datail.css");
 @import url("form.css");
 
