--- a/src/main/resources/templates/h5/mobile/carVip/listVip.html
+++ b/src/main/resources/templates/h5/mobile/carVip/listVip.html
@@ -17,10 +17,10 @@
             <div><a href="/mobile/login"><i class="iconfont icon-shouye"></i>首页</a></div>
             <div><a href="/mobile/setting"><i class="iconfont icon-shezhi"></i>设置</a></div>
         </header>
-         <div class="user bantop" style="background: linear-gradient(-320deg,#FF00FF 40%,rgba(243, 164, 37,0.6));border-bottom:10px solid #f1980a;">
-            <i class="iconfont icon-Vip"></i>
+         <div class="user bantop" style="background: linear-gradient(-320deg,#1bb4bb 40%,rgba(27, 180, 187, 0.4));border-bottom:10px solid #21999e;">
+            <i class="iconfont icon-biaoweiyongjiu"></i>
             <h3>永久月租管理</h3>
-            <h5>VIP MANAGEMENT</h5>
+            <h5>PERMANENT MONTHLY RENT MANAGEMENT</h5>
         </div>
         <ul class="mui-table-view longlist" id="longList"></ul>
         <a href="/mobile/car/vip/add" class="afix" id="consolt"><i class="iconfont icon-add"></i></a>
