--- a/src/main/resources/templates/h5/mobile/home.html
+++ b/src/main/resources/templates/h5/mobile/home.html
@@ -44,10 +44,10 @@
         <div class="grid dribbble" >
             <a class="mui-col-xs-4" id="longCar" ><i class="iconfont icon-yuezu" style="background: linear-gradient(320deg,#6dce5b 40%,rgba(109, 206, 91,0.4));"></i>月租车辆</a>
             <a class="mui-col-xs-4" id="businessCar" ><i class="iconfont icon-shanghu" style="background: linear-gradient(320deg,#1296db 40%,rgba(18, 150, 219,0.4));"></i>商户车辆</a>
-            <a class="mui-col-xs-4" id="timeCouponCar" ><i class="iconfont icon-youhuiquan" style="background: linear-gradient(320deg,#f3a425 40%,rgba(243, 164, 37,0.6))"></i>时长劵车辆</a>
-            <a class="mui-col-xs-4" id="vipCar" ><i class="iconfont icon-biaoweiyongjiu" style="background: linear-gradient(320deg,#FF00FF 40%,rgba(243, 164, 37,0.6))"></i>永久月租</a>
-            <a class="mui-col-xs-4" id="singleVip" ><i class="iconfont icon-YJ-VIP" style="background: linear-gradient(320deg,#f3a425 40%,rgba(243, 164, 37,0.6))"></i>单次VIP车辆</a>
-            <a class="mui-col-xs-4" id="special" ><i class="iconfont icon-Vip" style="background: linear-gradient(320deg,#C0C0C0 40%,rgba(243, 164, 37,0.6))"></i>特殊车辆</a>
+            <a class="mui-col-xs-4" id="timeCouponCar" ><i class="iconfont icon-youhuiquan" style="background: linear-gradient(320deg,#f3a425 40%,rgba(243, 164, 37,0.6));"></i>时长劵车辆</a>
+            <a class="mui-col-xs-4" id="vipCar" ><i class="iconfont icon-biaoweiyongjiu" style="background: linear-gradient(320deg,#1bb4bb 40%,rgba(27, 180, 187, 0.4));"></i>永久月租</a>
+            <a class="mui-col-xs-4" id="singleVip" ><i class="iconfont icon-YJ-VIP" style="background: linear-gradient(320deg,#f3a425 40%,rgba(243, 164, 37,0.6));"></i>单次VIP车辆</a>
+            <a class="mui-col-xs-4" id="special" ><i class="iconfont icon-Vip" style="background: linear-gradient(320deg,#e4787c 40%,rgba(228, 120, 124,0.4));"></i>特殊车辆</a>
             <a class="mui-col-xs-4" id="recharge"><i class="iconfont icon-chongzhi" style="background: linear-gradient(320deg,#e4787c 40%,rgba(228, 120, 124,0.4));"></i>商户充值</a>
             <a class="mui-col-xs-4" id="passageway"><i class="iconfont icon-tongdao" style="background: linear-gradient(320deg,#5f6eab 40%,rgba(95, 110, 171,0.4));"></i>通道管理</a>
         </div>
