--- a/src/main/resources/templates/h5/mobile/singleVip/listSingleVip.html
+++ b/src/main/resources/templates/h5/mobile/singleVip/listSingleVip.html
@@ -18,9 +18,9 @@
             <div><a href="/mobile/setting"><i class="iconfont icon-shezhi"></i>设置</a></div>
         </header>
          <div class="user bantop" style="background: linear-gradient(-320deg,#f3a425 40%,rgba(243, 164, 37,0.6));border-bottom:10px solid #f1980a;">
-            <i class="iconfont icon-Vip"></i>
+            <i class="iconfont icon-YJ-VIP"></i>
             <h3>单次VIP车辆</h3>
-            <h5>VIP MANAGEMENT</h5>
+            <h5>SINGLE VIP VEHICLE</h5>
         </div>
         <ul class="mui-table-view longlist" id="longList"></ul>
         <a href="/mobile/car/singleVip/add" class="afix" id="consolt"><i class="iconfont icon-add"></i></a>
