--- a/src/main/resources/templates/h5/mobile/special/listSpecial.html
+++ b/src/main/resources/templates/h5/mobile/special/listSpecial.html
@@ -17,10 +17,10 @@
             <div><a href="/mobile/login"><i class="iconfont icon-shouye"></i>首页</a></div>
             <div><a href="/mobile/setting"><i class="iconfont icon-shezhi"></i>设置</a></div>
         </header>
-         <div class="user bantop" style="background: linear-gradient(-320deg,#C0C0C0 40%,rgba(243, 164, 37,0.6));border-bottom:10px solid #f1980a;">
+         <div class="user bantop" style="background:  linear-gradient(-320deg,#e4787c 40%,rgba(228, 120, 124,0.4));border-bottom:10px solid #d6555a;">
             <i class="iconfont icon-Vip"></i>
             <h3>特殊车辆管理</h3>
-            <h5>VIP MANAGEMENT</h5>
+            <h5>SPECIAL VEHICLE MANAGEMENT</h5>
         </div>
         <ul class="mui-table-view longlist" id="longList"></ul>
         <a href="/mobile/car/special/add" class="afix" id="consolt"><i class="iconfont icon-add"></i></a>
