--- a/src/main/resources/templates/system/car/long/edit.html
+++ b/src/main/resources/templates/system/car/long/edit.html
@@ -26,7 +26,7 @@
 									<label><input id="number" name="number" th:value="${car.number}" class="form-control" type="text"></label>
 								</div>
 							</div>
-<!--							<div class="form-group">
+							<div class="form-group">
 								<label class="col-sm-3 control-label">替换车牌1：</label>
 								<div class="col-sm-8">
 									<input id="numberOne" name="numberOne" th:value="${car.numberOne}" class="form-control" type="text">
@@ -37,7 +37,7 @@
 								<div class="col-sm-8">
 									<input id="numberTow" name="numberTow" th:value="${car.numberTow}" class="form-control" type="text">
 								</div>
-							</div>-->
+							</div>
 							<div class="form-group">
 								<label class="col-sm-3 control-label">生效日期：</label>
 								<div class="col-sm-8">
