--- a/src/main/resources/templates/system/car/vip/add.html
+++ b/src/main/resources/templates/system/car/vip/add.html
@@ -25,7 +25,7 @@
 									<label><input id="number" name="number" class="form-control" type="text"></label>
 								</div>
 							</div>
-<!--							<div class="form-group">
+							<div class="form-group">
 								<label class="col-sm-3 control-label">替换车牌1：</label>
 								<div class="col-sm-8">
 									<input id="numberOne" name="numberOne" class="form-control" type="text">
@@ -36,7 +36,7 @@
 								<div class="col-sm-8">
 									<input id="numberTow" name="numberTow" class="form-control" type="text">
 								</div>
-							</div>-->
+							</div>
 							<div class="form-group">
 								<label class="col-sm-3 control-label">车主姓名：</label>
 								<div class="col-sm-8">
