--- a/src/main/resources/templates/h5/mobile/carTimeCoupon/editTimeCoupon.html
+++ b/src/main/resources/templates/h5/mobile/carTimeCoupon/editTimeCoupon.html
@@ -47,10 +47,10 @@
                 </div>
             </div>
             <input type="hidden" name="parkingType" value="6" >
-            <input type="timeCoupon" name="timeCoupon" th:value="${carDTO.timeCoupon}" >
+            <input type="hidden" name="timeCoupon" th:value="${carDTO.timeCoupon}" >
             <input type="hidden" name="id" th:value=${carDTO.id} >
             <input type="hidden" name="parkingId" th:value=${carDTO.parkingId} >
-            <input name="infieldPermission" value="0" type="hidden">
+            <input type="hidden" name="infieldPermission" value="0" >
         </form>
         <div class="mui-content-padded">
             <div class="btncont">
